--- a/doc/x4i/user-guide/x4i.tex
+++ b/doc/x4i/user-guide/x4i.tex
@@ -75,7 +75,7 @@ There are several ways to install \xfouri.  They are given below in order of inc
 
 \subsection{Easiest installation: using pip and git}
 \begin{minted}[frame=single,fontsize=\small]{sh}
-host$ pip install git+https://git.nndc.bnl.gov/dbrown/x4i
+host$ pip install git+https://github.com/brown170/x4i
 \end{minted}
 
 \subsection{Installation from a tarball distribution}
@@ -111,14 +111,14 @@ host$ pip install git+https://git.nndc.bnl.gov/dbrown/x4i
 
 \subsection{Source installation from git}
 
-This assumes that you will be editing the project in some fashion.  
-This installation does not automatically include the IAEA data files.  
+This assumes that you will be editing the project in some fashion.
+This installation does not automatically include the IAEA data files.
 You will need to download them yourself as described in step \#3. below.
 
 \begin{enumerate}
 \item Clone the project
 \begin{minted}[frame=single,fontsize=\small]{sh}
-host$ git clone https://git.nndc.bnl.gov/dbrown/x4i.git
+host$ git clone https://github.com/brown170/x4i.git
 \end{minted}
 
 \item Installation options:
