--- a/doc/x4i/user-guide/x4i.tex
+++ b/doc/x4i/user-guide/x4i.tex
@@ -72,11 +72,13 @@ EXFOR is a structured markup language for representing measured nuclear data.  I
 
 \section{Installation}
 There are several ways to install \xfouri.  They are given below in order of increasing difficulty.
+Please ensure your `git` installation has large file support (see https://git-lfs.github.com).
 
 \subsection{Easiest installation: using pip and git}
 \begin{minted}[frame=single,fontsize=\small]{sh}
 host$ pip install git+https://github.com/brown170/x4i
 \end{minted}
+This version of the installation process automatically installs the 2021-03-08 version of the EXFOR database.
 
 \subsection{Installation from a tarball distribution}
 
