information during install, tweaks to instructions pleading for patience during install

--- a/doc/x4i/user-guide/x4i.tex
+++ b/doc/x4i/user-guide/x4i.tex
@@ -72,13 +72,13 @@ EXFOR is a structured markup language for representing measured nuclear data.  I
 
 \section{Installation}
 There are several ways to install \xfouri.  They are given below in order of increasing difficulty.
-Please ensure your `git` installation has large file support (see https://git-lfs.github.com).
 
 \subsection{Easiest installation: using pip and git}
 \begin{minted}[frame=single,fontsize=\small]{sh}
-host$ pip install git+https://github.com/brown170/x4i
+host$ pip install git+https://github.com/brown170/x4i -v
 \end{minted}
-This version of the installation process automatically installs the 2021-03-08 version of the EXFOR database.
+This version of the installation process automatically installs the 2021-03-08 version of the EXFOR database.  As x4i must rebuild the database,
+installation may take some time.
 
 \subsection{Installation from a tarball distribution}
 
